Set LD_LIBRARY_PATH in Test 3

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -49,9 +49,6 @@ jobs:
           - winVersion: 7
             qtVersionMajor: 5
 
-    env:
-      LD_LIBRARY_PATH: /usr/lib/mxe/usr/x86_64-pc-linux-gnu/qt6/lib/
-
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -86,7 +83,7 @@ jobs:
     - name: Test 3
       shell: wsl-bash {0}
       run: |
-        ldd /usr/lib/mxe/usr/x86_64-pc-linux-gnu/qt6/bin/lrelease
+        LD_LIBRARY_PATH=/usr/lib/mxe/usr/x86_64-pc-linux-gnu/qt6/lib/ ldd /usr/lib/mxe/usr/x86_64-pc-linux-gnu/qt6/bin/lrelease
 
     - name: Test 3a
       shell: wsl-bash {0}
