--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,6 +31,23 @@ jobs:
         devel-repo: "ppa:st.loeffler/test"
         stable-repo: "ppa:st.loeffler/test"
 
+  appimage:
+    name: Linux/AppImage
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Build
+      run: docker buildx build -f ./.github/workflows/Dockerfile.appimage-debian -o out .
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: TeXworks-AppImage
+        path: out/TeXworks-*.AppImage
+
+
 ################################################################################
 
   win:
