--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,7 +39,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build
-      run: docker buildx build -f ./.github/workflows/Dockerfile.appimage-debian -o out .
+      run: DOCKER_BUILDKIT=1 docker build -f ./.github/workflows/Dockerfile.appimage-debian -o out .
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
