--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -38,6 +38,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: Pwd
+      run: pwd
+
+    - name: Pwd
+      run: ls
+
     - name: Build
       run: DOCKER_BUILDKIT=1 docker build -f ./.github/workflows/Dockerfile.appimage-debian -o out .
 
