--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,7 +164,7 @@ jobs:
         # /usr/local/bin/2to3, as well as versioned variants (e.g. 2to3-3.11)
         # are symlinked to the native python2 installation but prevent the
         # homebrew install from succeeding
-        rm -f /usr/local/bin/2to3
+        rm -f /usr/local/bin/2to3*
         brew update > brew_update.log || { echo "::error::Updating homebrew failed"; cat brew_update.log; exit 1; }
         brew install hunspell poppler-qt5 lua qt@5
         # As poppler-qt5 conflicts with poppler, we need to force-link it
