--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,3 +17,12 @@ jobs:
       - uses: OrbitalOwen/desktop-screenshot-action@0.1
         with:
           file-name: mac.jpg
+
+  linux:
+    name: Linux
+    runs-on: ubuntu-latest
+    steps:
+      - run: apt-get install imagemagick
+      - uses: OrbitalOwen/desktop-screenshot-action@0.1
+        with:
+          file-name: linux.jpg
