--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,7 +22,7 @@ jobs:
     name: Linux
     runs-on: ubuntu-latest
     steps:
-      - run: sudo apt-get install imagemagick
+      - run: sudo apt-get install imagemagick x11-xserver-utils
       - uses: OrbitalOwen/desktop-screenshot-action@0.1
         with:
           file-name: linux.jpg
