--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -199,22 +199,24 @@ jobs:
     - name: Qt plugin debug
       run: find ${QT_PLUGIN_PATH}
 
-    - name: Uninstall Homebrew
-      shell: bash
-      run: NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/uninstall.sh)"
-
-    - name: Reinstall clean Homebrew
-      shell: bash
-      run: |
-        NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-        brew install automake libtool pkg-config
-
-#    - name: Install Homebrew dependencies
+#    - name: Uninstall Homebrew
+#      shell: bash
+#      run: NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/uninstall.sh)"
+#
+#    - name: Reinstall clean Homebrew
 #      shell: bash
 #      run: |
-#        brew update > brew_update.log || { echo "::error::Updating homebrew failed"; cat brew_update.log; exit 1; }
-#        brew uninstall --ignore-dependencies --force brotli cairo fontconfig freetype harfbuzz jpeg-turbo libjpeg libpng libtiff little-cms2 openjpeg webp zstd
+#        NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 #        brew install automake libtool pkg-config
+
+    - name: Install Homebrew dependencies
+      shell: bash
+      run: |
+        brew remove --force $(brew list --formula)
+        brew remove --cask --force $(brew list)
+        brew update > brew_update.log || { echo "::error::Updating homebrew failed"; cat brew_update.log; exit 1; }
+        brew uninstall --ignore-dependencies --force brotli cairo fontconfig freetype harfbuzz jpeg-turbo libjpeg libpng libtiff little-cms2 openjpeg webp zstd
+        brew install automake libtool pkg-config
 
     - name: Debug
       shell: bash
