--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -190,6 +190,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+      with:
+        limit-access-to-actor: true\
+
     - name: Install Qt
       uses: jurplel/install-qt-action@v3
       with:
