--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -190,6 +190,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: jpeg config
+      run: |
+        cat /usr/local/include/jconfig.h
+        cat /usr/local/include/jmorecfg.h
+
     - name: Install Qt
       uses: jurplel/install-qt-action@v3
       with:
@@ -239,6 +244,11 @@ jobs:
       run: |
         cmake -S ".github/actions/setup-macos" -B ".github/actions/setup-macos/build" -DCMAKE_INSTALL_PREFIX=${RUNNER_TEMP}/tw-deps -DQT_DEFAULT_MAJOR_VERSION=${{ matrix.qtVersionMajor }}
         PKG_CONFIG_PATH=${RUNNER_TEMP}/tw-deps/lib/pkgconfig cmake --build ".github/actions/setup-macos/build" -v
+
+    - name: jpeg config
+      run: |
+        cat ${RUNNER_TEMP}/tw-deps/include/jconfig.h
+        cat ${RUNNER_TEMP}/tw-deps/include/jmorecfg.h
 
     - name: Configure
       run: cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DCMAKE_PREFIX_PATH="${RUNNER_TEMP}/tw-deps" -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=TRUE -DQT_DEFAULT_MAJOR_VERSION=${{ matrix.qtVersionMajor }} -DQT_PLUGIN_PATH=${QT_PLUGIN_PATH}
