--- a/.github/actions/setup-macos/CMakeLists.txt
+++ b/.github/actions/setup-macos/CMakeLists.txt
@@ -73,7 +73,7 @@ ADD_GH_GROUP(fontconfig)
 ExternalProject_Add(libjpeg
 	URL https://ijg.org/files/jpegsrc.v9.tar.gz
 	URL_HASH SHA256=6e004d72f9108014caccf434095514c139478c72b6b1873a3e3807ea5bec5c59
-	CONFIGURE_COMMAND ${CONFIGURE_ENV} ./configure ${CONFIGURE_ARGS}
+	CONFIGURE_COMMAND ${CONFIGURE_ENV} ./configure ${CONFIGURE_ARGS} --disable-static
 	BUILD_IN_SOURCE TRUE
 	TEST_AFTER_INSTALL TRUE
 )
