--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -193,7 +193,7 @@ jobs:
       # Mono seems to provide some (potentially incompatible) headers that CMake
       # might pick up on instead of ours
     - name: Uninstall Mono
-      run: /bin/sh -c "$(wget -fsSL https://github.com/gurza/cli-toolbox/raw/master/dotnet/mono-uninstall.sh)"
+      run: /bin/sh -c "$(curl -fsSL https://github.com/gurza/cli-toolbox/raw/master/dotnet/mono-uninstall.sh)"
 
     - name: jpeg config
       run: |
