--- a/.github/actions/msvc-dependencies/CMakeLists.txt
+++ b/.github/actions/msvc-dependencies/CMakeLists.txt
@@ -40,7 +40,7 @@ ExternalProject_Add(zlib
 )
 
 ExternalProject_Add(libpng
-	URL "https://downloads.sourceforge.net/project/libpng/libpng16/1.6.39/libpng-1.6.39.tar.xz"
+	URL "https://download.sourceforge.net/libpng/libpng-1.6.39.tar.xz"
 	URL_HASH SHA256=1f4696ce70b4ee5f85f1e1623dc1229b210029fa4b7aee573df3e2ba7b036937
 	CMAKE_ARGS ${CMAKE_ARGS}
 	DEPENDS zlib
