--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -68,7 +68,7 @@ jobs:
             # Qt 5.15 supports Windows >= 7 [https://doc.qt.io/qt-5/windows.html]
           - winVersion: 7
             qtVersionMajor: 5
-            additionalLibs: ''
+            additionalLibs: 'sharpyuv'
 
     steps:
     - name: Checkout
