--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -64,11 +64,11 @@ jobs:
             # Qt 6.2 supports Windows >= 10 [https://doc.qt.io/qt-6/windows.html]
           - winVersion: 10
             qtVersionMajor: 6
-            additionalLibs: 'zstd'
+            additionalLibs: 'zstd;z'
             # Qt 5.15 supports Windows >= 7 [https://doc.qt.io/qt-5/windows.html]
           - winVersion: 7
             qtVersionMajor: 5
-            additionalLibs: 'sharpyuv'
+            additionalLibs: ''
 
     steps:
     - name: Checkout
@@ -99,7 +99,7 @@ jobs:
           -DQT_DEFAULT_MAJOR_VERSION=${{ matrix.qtVersionMajor }} \
           -DCMAKE_INSTALL_PREFIX="./release" \
           -DPLATFORM_DEPENDENCIES='freetype;harfbuzz;freetype_too;bz2;iphlpapi;ssl;crypto;crypt32;ws2_32' \
-          -DPoppler_ADDITIONAL_DEPENDENCIES='freetype;harfbuzz;freetype_too;glib-2.0;intl;iconv;ws2_32;winmm;tiff;webp;jpeg;openjp2;png;lcms2;lzma;bz2;pcre16;wtsapi32;${{ matrix.additionalLibs }}' \
+          -DPoppler_ADDITIONAL_DEPENDENCIES='freetype;harfbuzz;freetype_too;glib-2.0;intl;iconv;ws2_32;winmm;tiff;webp;jpeg;openjp2;png;lcms2;lzma;bz2;pcre16;wtsapi32;sharpyuv;${{ matrix.additionalLibs }}' \
           -DTEXWORKS_ADDITIONAL_LIBS='freetype;harfbuzz;freetype_too;bz2;wtsapi32;opengl32;imm32;shlwapi;dwmapi;uxtheme' \
           -Dgp_tool='none'
 
