--- a/.github/workflows/Dockerfile.appimage-debian
+++ b/.github/workflows/Dockerfile.appimage-debian
@@ -32,7 +32,6 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
 	libbrotli-dev \
 	libbz2-dev \
 	libcairo2-dev \
-	libcurl4-nss-dev \
 	libdbus-1-dev \
 	libegl1-mesa-dev \
 	libfontconfig-dev \
@@ -41,9 +40,9 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
 	libjpeg-dev \
 	liblcms2-dev \
 	liblua5.3-dev \
-	libnss3-dev \
 	libopenjp2-7-dev \
 	libtiff-dev \
+	libxcb-cursor0 \
 	libxcb-icccm4 \
 	libxcb-image0 \
 	libxcb-keysyms1 \
@@ -117,7 +116,7 @@ RUN \
 	tar -xf poppler-${POPPLER_VERSION}.tar.xz && \
 	mkdir poppler-${POPPLER_VERSION}/build && \
 	cd poppler-${POPPLER_VERSION}/build && \
-	${CMAKE} .. -DCMAKE_PREFIX_PATH=/opt/qt/${QT_VERSION}/gcc_64/lib/cmake/ -DENABLE_CPP=OFF -DENABLE_GLIB=OFF -DENABLE_UTILS=OFF -DENABLE_UNSTABLE_API_ABI_HEADERS=ON -DENABLE_BOOST=OFF && \
+	${CMAKE} .. -DCMAKE_PREFIX_PATH=/opt/qt/${QT_VERSION}/gcc_64/lib/cmake/ -DENABLE_CPP=OFF -DENABLE_GLIB=OFF -DENABLE_UTILS=OFF -DENABLE_UNSTABLE_API_ABI_HEADERS=ON -DENABLE_BOOST=OFF -DENABLE_NSS3=OFF -DENABLE_GPGME=OFF -DENABLE_QT5=OFF -DENABLE_LIBCURL=OFF && \
 	make && \
 	make install
 
