--- a/.github/actions/setup-macos/CMakeLists.txt
+++ b/.github/actions/setup-macos/CMakeLists.txt
@@ -13,7 +13,12 @@ file(GLOB _font_dirs /System/Library/Assets*/com_apple_MobileAsset_Font*)
 list(INSERT _font_dirs 0 /System/Library/Fonts /Library/Fonts ~/Library/Fonts)
 string(REPLACE ";" "," _font_dirs "${_font_dirs}")
 
-set(CONFIGURE_ENV CFLAGS=-mmacosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET} CXXFLAGS=-mmacosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET})
+set(CONFIGURE_CFLAGS -mmacosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET})
+foreach(ARCH IN LISTS CMAKE_OSX_ARCHITECTURES)
+	set(CONFIGURE_CFLAGS ${CONFIGURE_CFLAGS} -arch ${ARCH})
+endforeach()
+
+set(CONFIGURE_ENV "CFLAGS=${CONFIGURE_CFLAGS} CXXFLAGS=${CONFIGURE_CFLAGS}")
 set(CONFIGURE_ARGS --prefix=${CMAKE_INSTALL_PREFIX})
 
 set(CMAKE_ARGS -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET} -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES} "-DCMAKE_PREFIX_PATH=${CMAKE_INSTALL_PREFIX}\\;${CMAKE_PREFIX_PATH}" -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=TRUE -DCMAKE_MACOSX_RPATH=TRUE -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX})
