Construc CONFIGURE_CFLAGS as string instead of as a list

--- a/.github/actions/setup-macos/CMakeLists.txt
+++ b/.github/actions/setup-macos/CMakeLists.txt
@@ -15,7 +15,7 @@ string(REPLACE ";" "," _font_dirs "${_font_dirs}")
 
 set(CONFIGURE_CFLAGS -mmacosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET})
 foreach(ARCH IN LISTS CMAKE_OSX_ARCHITECTURES)
-	set(CONFIGURE_CFLAGS ${CONFIGURE_CFLAGS} -arch ${ARCH})
+	set(CONFIGURE_CFLAGS "${CONFIGURE_CFLAGS} -arch ${ARCH}")
 endforeach()
 
 set(CONFIGURE_ENV "CFLAGS=\"${CONFIGURE_CFLAGS}\" CXXFLAGS=\"${CONFIGURE_CFLAGS}\"")
