Try not quoting CONFIGURE_ENV

--- a/.github/actions/setup-macos/CMakeLists.txt
+++ b/.github/actions/setup-macos/CMakeLists.txt
@@ -18,7 +18,7 @@ foreach(ARCH IN LISTS CMAKE_OSX_ARCHITECTURES)
 	set(CONFIGURE_CFLAGS "${CONFIGURE_CFLAGS} -arch ${ARCH}")
 endforeach()
 
-set(CONFIGURE_ENV "CFLAGS=\"${CONFIGURE_CFLAGS}\" CXXFLAGS=\"${CONFIGURE_CFLAGS}\"")
+set(CONFIGURE_ENV CFLAGS=${CONFIGURE_CFLAGS} CXXFLAGS=${CONFIGURE_CFLAGS})
 set(CONFIGURE_ARGS --prefix=${CMAKE_INSTALL_PREFIX})
 
 set(CMAKE_ARGS -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET} -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES} "-DCMAKE_PREFIX_PATH=${CMAKE_INSTALL_PREFIX}\\;${CMAKE_PREFIX_PATH}" -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=TRUE -DCMAKE_MACOSX_RPATH=TRUE -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX})
