--- a/.github/actions/setup-macos/CMakeLists.txt
+++ b/.github/actions/setup-macos/CMakeLists.txt
@@ -15,10 +15,10 @@ string(REPLACE ";" "," _font_dirs "${_font_dirs}")
 
 set(CONFIGURE_CFLAGS -mmacosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET})
 foreach(ARCH IN LISTS CMAKE_OSX_ARCHITECTURES)
-	set(CONFIGURE_CFLAGS "${CONFIGURE_CFLAGS} -arch ${ARCH}")
+	set(ARCH_FLAGS "${ARCH_FLAGS} -arch ${ARCH}")
 endforeach()
 
-set(CONFIGURE_ENV "CFLAGS=\"${CONFIGURE_CFLAGS}\" CXXFLAGS=\"${CONFIGURE_CFLAGS}\"")
+set(CONFIGURE_ENV "CFLAGS=\"${CONFIGURE_CFLAGS} ${ARCH_FLAGS}\" CXXFLAGS=\"${CONFIGURE_CFLAGS} ${ARCH_FLAGS}\"")
 set(CONFIGURE_ARGS --prefix=${CMAKE_INSTALL_PREFIX} --host x86_64-apple-darwin)
 
 set(CMAKE_ARGS -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET} -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES} "-DCMAKE_PREFIX_PATH=${CMAKE_INSTALL_PREFIX}\\;${CMAKE_PREFIX_PATH}" -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=TRUE -DCMAKE_MACOSX_RPATH=TRUE -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX})
@@ -59,7 +59,7 @@ ADD_GH_GROUP(gettext)
 ExternalProject_Add(hunspell
 	URL "https://github.com/hunspell/hunspell/archive/refs/tags/v1.7.2.tar.gz"
 	URL_HASH SHA256=69fa312d3586c988789266eaf7ffc9861d9f6396c31fc930a014d551b59bbd6e
-	CONFIGURE_COMMAND autoreconf -vfi && env -S "${CONFIGURE_ENV}" CPPFLAGS=-I${CMAKE_INSTALL_PREFIX}/include LDFLAGS=-L${CMAKE_INSTALL_PREFIX}/lib ./configure ${CONFIGURE_ARGS}
+	CONFIGURE_COMMAND autoreconf -vfi && env -S "${CONFIGURE_ENV}" CPPFLAGS=-I${CMAKE_INSTALL_PREFIX}/include LDFLAGS=\"-L${CMAKE_INSTALL_PREFIX}/lib ${ARCH_FLAGS}\" ./configure ${CONFIGURE_ARGS}
 	BUILD_IN_SOURCE TRUE
 	DEPENDS gettext
 )
