--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -177,7 +177,7 @@ jobs:
             qtVersionMajor: 6
             qtVersion: 6.5.3
             qtModules: qt5compat
-            arch: x86_64;arm64
+            arch: x86_64
             # Qt 5.15 supports macOS >= 10.13 [https://doc.qt.io/qt-5.15/macos.html]
             # poppler >= 22.01.0 uses std::filesystem, which seems to only be (fully)
             # supported on macOS 10.15 and up
