Try arm64 with special handling for --host

--- a/.github/actions/setup-macos/CMakeLists.txt
+++ b/.github/actions/setup-macos/CMakeLists.txt
@@ -17,7 +17,11 @@ set(CONFIGURE_ARGS --prefix=${CMAKE_INSTALL_PREFIX})
 set(CONFIGURE_CFLAGS -mmacosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET})
 foreach(ARCH IN LISTS CMAKE_OSX_ARCHITECTURES)
 	set(ARCH_FLAGS "${ARCH_FLAGS} -arch ${ARCH}")
-	set(CONFIGURE_ARGS ${CONFIGURE_ARGS} --host ${ARCH}-apple-darwin)
+	if (ARCH STREQUAL "arm64")
+		set(CONFIGURE_ARGS ${CONFIGURE_ARGS} --host aarch64-apple-darwin)
+	else ()
+		set(CONFIGURE_ARGS ${CONFIGURE_ARGS} --host ${ARCH}-apple-darwin)
+	endif()
 endforeach()
 set(CONFIGURE_ENV "CFLAGS=\"${CONFIGURE_CFLAGS} ${ARCH_FLAGS}\" CXXFLAGS=\"${CONFIGURE_CFLAGS} ${ARCH_FLAGS}\"")
 
