--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -199,7 +199,7 @@ jobs:
       run: find /usr/local/opt
 
     - name: /opt/homebrew/Cellar
-      run: /opt/homebrew/Cellar
+      run: find /opt/homebrew/Cellar
 
     - name: Configure
       run: cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DCMAKE_PREFIX_PATH="/usr/local/opt/qt@5"
